checker/tests/nullness/ExtendsSubtypingImplicit.java
import org.checkerframework.checker.nullness.qual.*;

// :: error: (extends.clause.invalid)
public @Nullable class ExtendsSubtypingImplicit {}
